# Minesweeper

./: .dockerignore  .gitignore  PROJECT_CLEANUP_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build-wasm.sh  docker-compose.etcd.yaml  docker-compose.yaml  envoy.yaml  invalid-policy.yaml  start-with-etcd.sh  test-config.json  test-docker-c5.sh  test-etcd-integration.sh  test-metrics-o1.sh  test-policy.yaml
.github/: copilot-instructions.md
.github/prompts/: speckit-tasks-recommender.md
.specify/memory/: constitution.md
cli/: 50-percent-policy.yaml  README.md  abort-policy.yaml  delay-policy.yaml  go.mod  go.sum  header-policy.yaml  main.go  sample-policy.json  sample-policy.yaml
cli/client/: client.go
cli/cmd/: policy.go  policy_apply.go  policy_delete.go  root.go
cli/examples/: README.md  no-fault-policy.yaml
cli/types/: policy.go
config/: envoy.yaml
control-plane/: distributor.go  go.mod  go.sum  integration_test.go  main.go
control-plane/api/: middleware.go  policy_controller.go
control-plane/middleware/: logging.go
control-plane/service/: enhanced_service_test.go  errors.go  policy_service.go
control-plane/storage/: enhanced_store_test.go  errors.go  etcd_store.go  etcd_store_test.go  memoryStore.go  store.go  types.go
docs/: DEPLOYMENT_AND_TESTING_GUIDE.md  PROJECT_SUMMARY.md
docs/design_doc/: Design_2_Wasm_plugin.md  Development_plan.md
docs/dev_doc/: API_REFERENCE.md  ARCHITECTURE.md  CONTROL_PLANE_DEEP_DIVE.md
executor/: CONTRIBUTING.md  Dockerfile.backend  Dockerfile.controlplane  Makefile  PHASE4_TEST_REPORT.md  envoy.yaml  test-us1.sh  test-us2.sh
executor/cli/: Makefile  go.mod  go.sum
executor/config/: control-plane.yaml
executor/control-plane/: distributor.go  go.mod  main.go
executor/docker/: Dockerfile.controlplane  Dockerfile.wasm  README.md  compose-test.sh  docker-compose.yaml  envoy.yaml
executor/docs/: CLI_BEST_PRACTICES.md  PROJECT_SUMMARY.md  WASM_ERROR_TROUBLESHOOTING.md
executor/k8s/: METRICS_SOLUTION.md  README.md  cleanup.sh  control-plane.yaml  deploy.sh  envoy-config.yaml  envoyfilter-wasm-stats.yaml  namespace.yaml  plugin-multi-instance.yaml  sample-app-with-proxy.yaml  wasm-server.yaml  wasmplugin.yaml
executor/scripts/: build.sh  ci-bench-check.sh  test-us1.sh  test-us2.sh
executor/wasm-plugin/: Cargo.toml  Dockerfile.wasm  Makefile
executor/wasm-plugin/benches/: compilation_bench.rs  executor_bench.rs  matcher_bench.rs
executor/wasm-plugin/src/: config.rs  executor.rs  identity.rs  int_1_comprehensive_unit_tests.rs  int_2_multi_rules_tests.rs  int_3_end_to_end_tests.rs  lib.rs  matcher.rs  metrics.rs  panic_safety.rs  reconnect.rs  test_basic.rs  test_w5_integration.rs  test_w5_unit.rs  time_control.rs  time_control_deserialization_test.rs  time_control_test.rs
executor/wasm-plugin/tests/: comprehensive_tests.rs  config_parsing_test.rs  panic_safety_test.rs  reconnect_test.rs
executor/wasm-plugin/tests/e2e/: envoy_test.rs
executor/wasm-plugin/tests/fixtures/: policies.rs
executor/wasm-plugin/tests/integration/: stateful_test.rs  temporal_test.rs
executor/wasm-plugin/tests/unit/: executor_test.rs  matcher_test.rs
k8s/: control-plane.yaml  sample-app-with-proxy.yaml
recommender/: DESIGN_REVIEW.md  DESIGN_REVIEW_SUMMARY.md  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
recommender/config/: fault_space_config.yaml
recommender/docs/design_doc/: Design.md  Design_1_CoordinatorService.md  Design_2_Optimizer Core.md  Design_3_Response Analyzer.md  Design_5_Executor_Integration.md  Development_plan.md
recommender/src/: types.py
recommender/src/analyzer/: service.py
recommender/src/boifi_recommender/: __init__.py  config.py  main.py
recommender/src/boifi_recommender/analyzer/: service.py
recommender/src/boifi_recommender/clients/: executor_client.py
recommender/src/boifi_recommender/coordinator/: worker.py
recommender/src/boifi_recommender/models/: api_models.py  fault_plan.py  observation.py  session.py
recommender/src/boifi_recommender/optimizer/: core.py
recommender/src/boifi_recommender/services/: session_manager.py
recommender/src/optimizer/: space_converter.py
recommender/tests/: conftest.py
recommender/tests/unit/: test_models.py
service-discovery/: Dockerfile  Makefile  README.md  config-test.yaml  config.example.yaml  go.mod  go.sum
service-discovery/cmd/: main.go
service-discovery/k8s/: deployment.yaml
specs/001-boifi-executor/: PHASE_6_COMPLETE.md  PHASE_8_ACCEPTANCE.md  coverage-final.md  performance-baseline.md  phase3_progress.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-architecture.md
specs/002-boifi-recommender/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-service-discovery/: spec.md
specs/005-fix-fault-injection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-service-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test-html/: index.html
wasm-plugin/: Cargo.toml  W6_IMPLEMENTATION_SUMMARY.md  test_robustness.rs  test_robustness.sh
wasm-plugin/src/: config.rs  (+5 more)
(+129 files in other folders)
