[package]
name = "hfi_wasm_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]

# Create a test library for testing components without proxy-wasm dependency
[[test]]
name = "comprehensive"
path = "tests/comprehensive_tests.rs"

[[test]]
name = "matcher"
path = "tests/unit/matcher_test.rs"

