[package]
name = "hfi_wasm_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Create a test library for testing components without proxy-wasm dependency
[[test]]
name = "comprehensive"
path = "tests/comprehensive_tests.rs"

[[test]]
name = "matcher"
path = "tests/unit/matcher_test.rs"

[[test]]
name = "executor_test"
path = "tests/unit/executor_test.rs"

[[test]]
name = "stateful_test"
path = "tests/integration/stateful_test.rs"

[[test]]
name = "temporal_test"
path = "tests/integration/temporal_test.rs"

# Benchmark configurations
[[bench]]
name = "matcher_bench"
path = "benches/matcher_bench.rs"
harness = false

[[bench]]
name = "executor_bench"
path = "benches/executor_bench.rs"
harness = false

[[bench]]
name = "compilation_bench"
path = "benches/compilation_bench.rs"
harness = false

[profile.bench]
opt-level = 3
lto = true
